replace Guava and Guice usage with stream API and JSR-330 in kb-jaxrs
This is last PR of killbill-jaxrs for issue 1615.